--- a/modbus-test/Cargo.toml
+++ b/modbus-test/Cargo.toml
@@ -4,8 +4,8 @@ version = "0.0.1"
 edition = "2021"
 
 [dependencies]
-tokio-modbus = { version = "*", default-features = false, features = ["tcp"] }
-tokio = { version = "1", features = ["full"] }
+tokio = { workspace = true }
+tokio-modbus = { workspace = true }
 
 messages = { workspace = true }
 modbus-core = { workspace = true }
