--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,12 +10,12 @@ resolver = "2"
 
 
 [workspace.dependencies]
-tokio-modbus = { version = "*", default-features = false, features = ["tcp"] }
+tokio-modbus = { version = "0.9", default-features = false, features = ["tcp"] }
 tokio = { version = "1", features = ["full"] }
 tokio-util = { version = "0.7" }
 tracing = { version = "0.1" }
 
 async-task-utils = { path = "./libraries/async-task-utils" }
-messages-lib = { path = "./libraries/messages-lib" }
 messages = { path = "./utils/messages" }
+messages-lib = { path = "./libraries/messages-lib" }
 modbus-core = { path = "./libraries/modbus-core" }
