--- a/drivers/modbus-client/Cargo.toml
+++ b/drivers/modbus-client/Cargo.toml
@@ -1,8 +1,11 @@
 [package]
 name = "modbus-client"
-version = "0.1.0"
+version = "0.0.1"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+tokio = { workspace = true }
+tokio-modbus = { workspace = true }
+
+messages-lib = { workspace = true }
