--- a/drivers/modbus-client/Cargo.toml
+++ b/drivers/modbus-client/Cargo.toml
@@ -9,3 +9,4 @@ tokio = { workspace = true }
 tokio-modbus = { workspace = true }
 
 messages-lib = { workspace = true }
+modbus-client-config = { workspace = true }
