--- a/modbus-test/Cargo.toml
+++ b/modbus-test/Cargo.toml
@@ -5,8 +5,8 @@ edition = "2021"
 
 [dependencies]
 tokio = { workspace = true }
-tokio-modbus = { workspace = true }
 url = { workspace = true }
 
 messages = { workspace = true }
+modbus-client = { workspace = true }
 modbus-client-config = { workspace = true }
