--- a/modbus-test/Cargo.toml
+++ b/modbus-test/Cargo.toml
@@ -8,5 +8,6 @@ tokio = { workspace = true }
 url = { workspace = true }
 
 messages = { workspace = true }
+messages-lib = { workspace = true }
 modbus-client = { workspace = true }
 modbus-client-config = { workspace = true }
