prepare for commit

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [workspace]
 members = [
-    "./drivers/modbus-client",
-    "./drivers/modbus-client-config",
+    "./drivers/rsiot-modbus-client",
+    "./drivers/rsiot-modbus-client-config",
     "./libraries/async-task-utils",
     "./libraries/messages-lib",
     "./modbus-test",
@@ -20,5 +20,5 @@ url = { version = "2.4" }
 async-task-utils = { path = "./libraries/async-task-utils" }
 messages = { path = "./utils/messages" }
 messages-lib = { path = "./libraries/messages-lib" }
-modbus-client = { path = "./drivers/modbus-client" }
-modbus-client-config = { path = "./drivers/modbus-client-config" }
+rsiot-modbus-client = { path = "./drivers/rsiot-modbus-client" }
+rsiot-modbus-client-config = { path = "./drivers/rsiot-modbus-client-config" }
