--- a/drivers/rsiot-modbus-client-config/Cargo.toml
+++ b/drivers/rsiot-modbus-client-config/Cargo.toml
@@ -1,9 +1,8 @@
 [package]
-name = "modbus-client-config"
+name = "rsiot-modbus-client-config"
 version = "0.0.1"
 edition = "2021"
 
 
 [dependencies]
-messages-lib = { workspace = true }
 url = { workspace = true }
