--- a/drivers/rsiot-modbus-client/Cargo.toml
+++ b/drivers/rsiot-modbus-client/Cargo.toml
@@ -2,6 +2,8 @@
 name = "rsiot-modbus-client"
 version = "0.0.1"
 edition = "2021"
+description = "Опрос устройств Modbus, используя библиотеку tokio-modbus"
+license = "MIT"
 
 
 [dependencies]
