--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [workspace]
 members = [
-    "./drivers/rsiot-modbus-client",
-    "./drivers/rsiot-modbus-client-config",
+    "./rsiot-modbus-client",
+    "./rsiot-modbus-client-config",
     "./libraries/async-task-utils",
     "./libraries/messages-lib",
     "./modbus-test",
@@ -20,6 +20,8 @@ url = { version = "2.4" }
 async-task-utils = { path = "./libraries/async-task-utils" }
 messages = { path = "./utils/messages" }
 messages-lib = { path = "./libraries/messages-lib" }
-rsiot-modbus-client = { path = "./drivers/rsiot-modbus-client" }
-# rsiot-modbus-client-config = { path = "./drivers/rsiot-modbus-client-config" }
-rsiot-modbus-client-config = { version = "*" }
+# rsiot-modbus-client = { path = "./rsiot-modbus-client" }
+# rsiot-modbus-client-config = { path = "./rsiot-modbus-client-config" }
+
+rsiot-modbus-client = { version = "0.0" }
+rsiot-modbus-client-config = { version = "0.0" }
