--- a/rsiot-modbus-client/Cargo.toml
+++ b/rsiot-modbus-client/Cargo.toml
@@ -11,4 +11,5 @@ tokio = { workspace = true }
 tokio-modbus = { workspace = true }
 url = { workspace = true }
 
+rsiot-messages-core = { workspace = true }
 rsiot-modbus-client-config = { workspace = true }
