--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ tokio-modbus = { version = "0.9", default-features = false, features = ["tcp"] }
 tokio = { version = "1", features = ["full"] }
 tokio-util = { version = "0.7" }
 tracing = { version = "0.1" }
+tracing-subscriber = { version = "0.3" }
 url = { version = "2.4" }
 
 async-task-utils = { path = "./libraries/async-task-utils" }
