--- a/rsiot-modbus-client/Cargo.toml
+++ b/rsiot-modbus-client/Cargo.toml
@@ -9,7 +9,11 @@ license = "MIT"
 [dependencies]
 tokio = { workspace = true }
 tokio-modbus = { workspace = true }
+tracing = { workspace = true }
 url = { workspace = true }
 
 rsiot-messages-core = { workspace = true }
 rsiot-modbus-client-config = { workspace = true }
+
+[dev-dependencies]
+tracing-subscriber = { workspace = true }
