--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,20 @@
 [workspace]
 members = [
+    "./rsiot-messages-core",
     "./rsiot-modbus-client",
     "./rsiot-modbus-client-config",
-    "./rsiot-messages-core",
+    "./rsiot-redis-publisher",
+    "./rsiot-redis-subscriber",
     "./libraries/async-task-utils",
 ]
 resolver = "2"
 
 
 [workspace.dependencies]
+futures-util = { version = "0.3" }
+redis = { version = "0.23", features = ["tokio-comp"] }
+serde = { version = "1", features = ["derive"] }
+serde_json = { version = "1" }
 tokio-modbus = { version = "0.9", default-features = false, features = ["tcp"] }
 tokio = { version = "1", features = ["full"] }
 tokio-util = { version = "0.7" }
@@ -20,6 +26,8 @@ async-task-utils = { path = "./libraries/async-task-utils" }
 rsiot-messages-core = { path = "./rsiot-messages-core" }
 rsiot-modbus-client = { path = "./rsiot-modbus-client" }
 rsiot-modbus-client-config = { path = "./rsiot-modbus-client-config" }
+rsiot-redis-publisher = { path = "./rsiot-redis-publisher" }
+rsiot-redis-subscriber = { path = "./rsiot-redis-subscriber" }
 
 # rsiot-modbus-client = { version = "0.0" }
 # rsiot-modbus-client-config = { version = "0.0" }
