--- a/rsiot-redis-subscriber/Cargo.toml
+++ b/rsiot-redis-subscriber/Cargo.toml
@@ -12,3 +12,7 @@ tracing = { workspace = true }
 url = { workspace = true }
 
 rsiot-messages-core = { workspace = true }
+
+[dev-dependencies]
+serde = { workspace = true }
+tracing-subscriber = { workspace = true }
