--- a/rsiot-redis-publisher/Cargo.toml
+++ b/rsiot-redis-publisher/Cargo.toml
@@ -1,8 +1,17 @@
 [package]
 name = "rsiot-redis-publisher"
-version = "0.1.0"
+version = "0.0.1"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+redis = { workspace = true }
+tokio = { workspace = true }
+tracing = { workspace = true }
+url = { workspace = true }
+
+rsiot-messages-core = { workspace = true }
+
+[dev-dependencies]
+tracing-subscriber = { workspace = true }
+serde = { workspace = true }
