--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,18 +5,26 @@ members = [
     "./rsiot-modbus-client-config",
     "./rsiot-redis-publisher",
     "./rsiot-redis-subscriber",
+    "./rsiot-timescaledb-storing",
     "./libraries/async-task-utils",
 ]
 resolver = "2"
 
 
 [workspace.dependencies]
+chrono = { version = "0.4", features = ["serde"] }
 futures-util = { version = "0.3" }
 redis = { version = "0.23", features = ["tokio-comp"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = { version = "1" }
-tokio-modbus = { version = "0.9", default-features = false, features = ["tcp"] }
+sqlx = { version = "0.7", features = [
+    "chrono",
+    "macros",
+    "postgres",
+    "runtime-tokio",
+] }
 tokio = { version = "1", features = ["full"] }
+tokio-modbus = { version = "0.9", default-features = false, features = ["tcp"] }
 tokio-util = { version = "0.7" }
 tracing = { version = "0.1" }
 tracing-subscriber = { version = "0.3" }
@@ -28,6 +36,7 @@ rsiot-modbus-client = { path = "./rsiot-modbus-client" }
 rsiot-modbus-client-config = { path = "./rsiot-modbus-client-config" }
 rsiot-redis-publisher = { path = "./rsiot-redis-publisher" }
 rsiot-redis-subscriber = { path = "./rsiot-redis-subscriber" }
+rsiot-timescaledb-storing = { path = "./rsiot-timescaledb-storing" }
 
 # rsiot-modbus-client = { version = "0.0" }
 # rsiot-modbus-client-config = { version = "0.0" }
