--- a/rsiot-timescaledb-storing/Cargo.toml
+++ b/rsiot-timescaledb-storing/Cargo.toml
@@ -7,3 +7,7 @@ edition = "2021"
 [dependencies]
 chrono = { workspace = true }
 sqlx = { workspace = true }
+tokio = { workspace = true }
+tracing = { workspace = true }
+
+rsiot-messages-core = { workspace = true }
