--- a/rsiot-timescaledb-storing/Cargo.toml
+++ b/rsiot-timescaledb-storing/Cargo.toml
@@ -9,5 +9,12 @@ chrono = { workspace = true }
 sqlx = { workspace = true }
 tokio = { workspace = true }
 tracing = { workspace = true }
+url = { workspace = true }
 
 rsiot-messages-core = { workspace = true }
+
+
+[dev-dependencies]
+serde = { workspace = true }
+chrono = { workspace = true }
+tracing-subscriber = { workspace = true }
