--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ members = [
     "./rsiot-redis-publisher",
     "./rsiot-redis-subscriber",
     "./rsiot-timescaledb-storing",
+    "./rsiot-websocket-server",
     "./libraries/async-task-utils",
 ]
 resolver = "2"
@@ -26,6 +27,7 @@ sqlx = { version = "0.7", features = [
 ] }
 tokio = { version = "1", features = ["full"] }
 tokio-modbus = { version = "0.9", default-features = false, features = ["tcp"] }
+tokio-tungstenite = { version = "0.20" }
 tokio-util = { version = "0.7" }
 tracing = { version = "0.1" }
 tracing-subscriber = { version = "0.3" }
@@ -39,6 +41,7 @@ rsiot-modbus-client-config = { path = "./rsiot-modbus-client-config" }
 rsiot-redis-publisher = { path = "./rsiot-redis-publisher" }
 rsiot-redis-subscriber = { path = "./rsiot-redis-subscriber" }
 rsiot-timescaledb-storing = { path = "./rsiot-timescaledb-storing" }
+rsiot-websocket-server = { path = "./rsiot-websocket-server" }
 
 # rsiot-modbus-client = { version = "0.0" }
 # rsiot-modbus-client-config = { version = "0.0" }
