--- a/rsiot-websocket-server/Cargo.toml
+++ b/rsiot-websocket-server/Cargo.toml
@@ -14,3 +14,7 @@ url = { workspace = true }
 
 rsiot-messages-core = { workspace = true }
 rsiot-channel-utils = { workspace = true }
+
+[dev-dependencies]
+serde = { workspace = true }
+tracing-subscriber = { workspace = true }
