--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [workspace]
 members = [
     "./rsiot-channel-utils",
+    "./rsiot-http-server",
     "./rsiot-messages-core",
     "./rsiot-modbus-client",
     "./rsiot-modbus-client-config",
@@ -14,7 +15,10 @@ resolver = "2"
 
 
 [workspace.dependencies]
+axum = { version = "0.6" }
+axum-test = { version = "13.1" }
 chrono = { version = "0.4", features = ["serde"] }
+hyper = { version = "0.14" }
 futures-util = { version = "0.3" }
 redis = { version = "0.23", features = ["tokio-comp"] }
 serde = { version = "1", features = ["derive"] }
@@ -29,9 +33,11 @@ tokio = { version = "1", features = ["full"] }
 tokio-modbus = { version = "0.9", default-features = false, features = ["tcp"] }
 tokio-tungstenite = { version = "0.20" }
 tokio-util = { version = "0.7" }
+tower-http = { version = "0.4", features = ["cors"] }
 tracing = { version = "0.1" }
 tracing-subscriber = { version = "0.3" }
 url = { version = "2.4" }
+
 
 async-task-utils = { path = "./libraries/async-task-utils" }
 rsiot-channel-utils = { path = "./rsiot-channel-utils" }
