--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,7 @@ tokio = { version = "1", features = ["full"] }
 tokio-modbus = { version = "0.9", default-features = false, features = ["tcp"] }
 tokio-tungstenite = { version = "0.20" }
 tokio-util = { version = "0.7" }
-tower-http = { version = "0.4", features = ["cors"] }
+tower-http = { version = "0.4", features = ["cors", "trace"] }
 tracing = { version = "0.1" }
 tracing-subscriber = { version = "0.3" }
 url = { version = "2.4" }
