--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,8 @@
 [workspace]
 members = [
     "./rsiot-channel-utils",
+    "./rsiot-http-client",
+    "./rsiot-http-client-config",
     "./rsiot-http-server",
     "./rsiot-messages-core",
     "./rsiot-modbus-client",
@@ -21,6 +23,7 @@ chrono = { version = "0.4", features = ["serde"] }
 hyper = { version = "0.14" }
 futures-util = { version = "0.3" }
 redis = { version = "0.23", features = ["tokio-comp"] }
+reqwest = { version = "0.11", features = ["json"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = { version = "1" }
 sqlx = { version = "0.7", features = [
