--- a/rsiot-http-client-config/Cargo.toml
+++ b/rsiot-http-client-config/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "rsiot-http-client-config"
-version = "0.1.0"
+version = "0.0.1"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+url = { workspace = true }
