add metadata to cargo.toml

--- a/rsiot-channel-utils/Cargo.toml
+++ b/rsiot-channel-utils/Cargo.toml
@@ -2,6 +2,8 @@
 name = "rsiot-channel-utils"
 version = "0.0.2"
 edition = "2021"
+description = "Вспомогательные компоненты"
+license = "MIT"
 
 [dependencies]
 tokio = { workspace = true }
