--- a/rsiot-redis-subscriber/Cargo.toml
+++ b/rsiot-redis-subscriber/Cargo.toml
@@ -2,6 +2,8 @@
 name = "rsiot-redis-subscriber"
 version = "0.0.2"
 edition = "2021"
+description = "Подписка на сообщения Redis"
+license = "MIT"
 
 
 [dependencies]
