--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,10 +41,12 @@ tracing-subscriber = { version = "0.3" }
 url = { version = "2.4" }
 
 rsiot-channel-utils = { version = "0.0.2" }
+rsiot-http-client-config = { version = "0.0.2" }
 rsiot-messages-core = { version = "0.0.2" }
 rsiot-modbus-client-config = { version = "0.0.2" }
 
 [patch.crates-io]
 rsiot-channel-utils = { path = "./rsiot-channel-utils" }
+rsiot-http-client-config = { path = "./rsiot-http-client-config" }
 rsiot-messages-core = { path = "./rsiot-messages-core" }
 rsiot-modbus-client-config = { path = "./rsiot-modbus-client-config" }
