--- a/rsiot-http-client/Cargo.toml
+++ b/rsiot-http-client/Cargo.toml
@@ -6,3 +6,11 @@ description = "HTTP-клиент"
 license = "MIT"
 
 [dependencies]
+reqwest = { workspace = true }
+tokio = { workspace = true }
+
+rsiot-http-client-config = { workspace = true }
+rsiot-messages-core = { workspace = true }
+
+[dev-dependencies]
+serde = { workspace = true }
