--- a/rsiot-http-client/Cargo.toml
+++ b/rsiot-http-client/Cargo.toml
@@ -8,6 +8,7 @@ license = "MIT"
 [dependencies]
 reqwest = { workspace = true }
 tokio = { workspace = true }
+tracing = { workspace = true }
 url = { workspace = true }
 
 rsiot-http-client-config = { workspace = true }
@@ -15,3 +16,4 @@ rsiot-messages-core = { workspace = true }
 
 [dev-dependencies]
 serde = { workspace = true }
+tracing-subscriber = { workspace = true }
