--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ resolver = "2"
 axum = { version = "0.6" }
 axum-test = { version = "13.1" }
 chrono = { version = "0.4", features = ["serde"] }
+http = { version = "0.2" }
 hyper = { version = "0.14" }
 futures-util = { version = "0.3" }
 redis = { version = "0.23", features = ["tokio-comp"] }
