--- a/rsiot-http-client-config/Cargo.toml
+++ b/rsiot-http-client-config/Cargo.toml
@@ -7,6 +7,7 @@ license = "MIT"
 
 
 [dependencies]
+http = { workspace = true }
 url = { workspace = true }
 
 rsiot-messages-core = { workspace = true }
