--- a/rsiot-http-client/Cargo.toml
+++ b/rsiot-http-client/Cargo.toml
@@ -16,4 +16,5 @@ rsiot-messages-core = { workspace = true }
 
 [dev-dependencies]
 serde = { workspace = true }
+serde_json = { workspace = true }
 tracing-subscriber = { workspace = true }
