--- a/rsiot-channel-utils/Cargo.toml
+++ b/rsiot-channel-utils/Cargo.toml
@@ -9,6 +9,7 @@ license = "MIT"
 tokio = { workspace = true }
 tracing = { workspace = true }
 
+rsiot-component-core = { workspace = true }
 rsiot-messages-core = { workspace = true }
 
 [dev-dependencies]
