--- a/rsiot-component-core/Cargo.toml
+++ b/rsiot-component-core/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 
 [dependencies]
+futures = { version = "*" }
 tokio = { workspace = true }
 
 rsiot-messages-core = { workspace = true }
