--- a/rsiot-websocket-client/Cargo.toml
+++ b/rsiot-websocket-client/Cargo.toml
@@ -9,11 +9,14 @@ futures-util = { workspace = true }
 tokio = { workspace = true }
 tokio-tungstenite = { workspace = true }
 tracing = { workspace = true }
+url = { workspace = true }
 
-rsiot-messages-core = { workspace = true }
+rsiot-channel-utils = { workspace = true }
 rsiot-component-core = { workspace = true }
+rsiot-messages-core = { workspace = true }
 
 [dev-dependencies]
 serde = { workspace = true }
+tracing-subscriber = { workspace = true }
 
 rsiot-channel-utils = { workspace = true }
