--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,3 +41,14 @@ services:
     profiles:
       - "dev"
     command: wstest -m broadcastserver -w ws://localhost:9001
+
+  # redis
+  redis:
+    container_name: redis
+    hostname: redis
+    image: redis/redis-stack:latest
+    ports:
+      - "6379:6379"
+      - "4000:8001"
+    profiles:
+      - "dev"
