--- a/rsiot-redis-subscriber/Cargo.toml
+++ b/rsiot-redis-subscriber/Cargo.toml
@@ -13,6 +13,8 @@ tokio = { workspace = true }
 tracing = { workspace = true }
 url = { workspace = true }
 
+rsiot-channel-utils = { workspace = true }
+rsiot-component-core = { workspace = true }
 rsiot-messages-core = { workspace = true }
 
 [dev-dependencies]
