--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [workspace]
 members = [
-    "./rsiot-channel-utils",
     "./rsiot-component-core",
+    "./rsiot-extra-components",
     "./rsiot-http-client",
     "./rsiot-http-client-config",
     "./rsiot-http-server",
@@ -13,7 +13,6 @@ members = [
     "./rsiot-timescaledb-storing",
     "./rsiot-websocket-server",
     "./rsiot-websocket-client",
-
 ]
 resolver = "2"
 
@@ -45,14 +44,14 @@ tracing = { version = "0.1" }
 tracing-subscriber = { version = "0.3" }
 url = { version = "2.4" }
 
-rsiot-channel-utils = { version = "0.0.2" }
+rsiot-extra-components = { version = "0.0.2" }
 rsiot-component-core = { version = "0.0.2" }
 rsiot-http-client-config = { version = "0.0.2" }
 rsiot-messages-core = { version = "0.0.2" }
 rsiot-modbus-client-config = { version = "0.0.2" }
 
 [patch.crates-io]
-rsiot-channel-utils = { path = "./rsiot-channel-utils" }
+rsiot-extra-components = { path = "./rsiot-extra-components" }
 rsiot-component-core = { path = "./rsiot-component-core" }
 rsiot-http-client-config = { path = "./rsiot-http-client-config" }
 rsiot-messages-core = { path = "./rsiot-messages-core" }
