--- a/rsiot-redis-publisher/Cargo.toml
+++ b/rsiot-redis-publisher/Cargo.toml
@@ -12,8 +12,8 @@ tokio = { workspace = true }
 tracing = { workspace = true }
 url = { workspace = true }
 
-rsiot-channel-utils = { workspace = true }
 rsiot-component-core = { workspace = true }
+rsiot-extra-components = { workspace = true }
 rsiot-messages-core = { workspace = true }
 
 [dev-dependencies]
