--- a/rsiot-websocket-client/Cargo.toml
+++ b/rsiot-websocket-client/Cargo.toml
@@ -11,12 +11,10 @@ tokio-tungstenite = { workspace = true }
 tracing = { workspace = true }
 url = { workspace = true }
 
-rsiot-channel-utils = { workspace = true }
 rsiot-component-core = { workspace = true }
+rsiot-extra-components = { workspace = true }
 rsiot-messages-core = { workspace = true }
 
 [dev-dependencies]
 serde = { workspace = true }
 tracing-subscriber = { workspace = true }
-
-rsiot-channel-utils = { workspace = true }
