--- a/rsiot-websocket-server/Cargo.toml
+++ b/rsiot-websocket-server/Cargo.toml
@@ -14,8 +14,8 @@ tokio-tungstenite = { workspace = true }
 tracing = { workspace = true }
 url = { workspace = true }
 
+rsiot-extra-components = { workspace = true }
 rsiot-messages-core = { workspace = true }
-rsiot-channel-utils = { workspace = true }
 
 [dev-dependencies]
 serde = { workspace = true }
