--- a/rsiot-websocket-client/Cargo.toml
+++ b/rsiot-websocket-client/Cargo.toml
@@ -2,6 +2,8 @@
 name = "rsiot-websocket-client"
 version = "0.0.3"
 edition = "2021"
+description = "Websocket-клиент"
+license = "MIT"
 
 
 [dependencies]
