--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,11 @@ members = [
 ]
 resolver = "2"
 
+[workspace.package]
+edition = "2021"
+license = "MIT OR Apache-2.0"
+rust-version = "1.70.0"
+
 
 [workspace.dependencies]
 axum = { version = "0.6" }
@@ -45,11 +50,14 @@ tracing = { version = "0.1" }
 tracing-subscriber = { version = "0.3" }
 url = { version = "2.4" }
 
-rsiot-extra-components = { version = "0.0.3", path = "./rsiot-extra-components" }
-rsiot-component-core = { version = "0.0.3", path = "./rsiot-component-core" }
-rsiot-http-client-config = { version = "0.0.3", path = "./rsiot-http-client-config" }
-rsiot-messages-core = { version = "0.0.3", path = "./rsiot-messages-core" }
-rsiot-modbus-client-config = { version = "0.0.3", path = "./rsiot-modbus-client-config" }
-rsiot-redis-publisher = { version = "0.0.3", path = "./rsiot-redis-publisher" }
-rsiot-redis-subscriber = { version = "0.0.3", path = "./rsiot-redis-subscriber" }
-rsiot-websocket-client = { version = "0.0.3", path = "./rsiot-websocket-client" }
+# документация
+document-features = { version = "0.2" }
+
+rsiot-extra-components = { version = "0.0.4", path = "./rsiot-extra-components" }
+rsiot-component-core = { version = "0.0.4", path = "./rsiot-component-core" }
+rsiot-http-client-config = { version = "0.0.4", path = "./rsiot-http-client-config" }
+rsiot-messages-core = { version = "0.0.4", path = "./rsiot-messages-core" }
+rsiot-modbus-client-config = { version = "0.0.4", path = "./rsiot-modbus-client-config" }
+rsiot-redis-publisher = { version = "0.0.4", path = "./rsiot-redis-publisher" }
+rsiot-redis-subscriber = { version = "0.0.4", path = "./rsiot-redis-subscriber" }
+rsiot-websocket-client = { version = "0.0.4", path = "./rsiot-websocket-client" }
