--- a/rsiot-websocket-server/Cargo.toml
+++ b/rsiot-websocket-server/Cargo.toml
@@ -14,6 +14,7 @@ tokio-tungstenite = { workspace = true }
 tracing = { workspace = true }
 url = { workspace = true }
 
+rsiot-component-core = { workspace = true }
 rsiot-extra-components = { workspace = true }
 rsiot-messages-core = { workspace = true }
 
