--- a/rsiot-extra-components/Cargo.toml
+++ b/rsiot-extra-components/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 name = "rsiot-extra-components"
 version = "0.0.4"
-edition = "2021"
 description = "Дополнительные компоненты"
-license = "MIT"
+license.workspace = true
+edition.workspace = true
+rust-version.workspace = true
 
 [dependencies]
 tokio = { workspace = true }
