--- a/rsiot-http-client-config/Cargo.toml
+++ b/rsiot-http-client-config/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 name = "rsiot-http-client-config"
 version = "0.0.4"
-edition = "2021"
 description = "Конфигурация HTTP-клиента"
-license = "MIT"
+license.workspace = true
+edition.workspace = true
+rust-version.workspace = true
 
 
 [dependencies]
