--- a/rsiot-http-server/Cargo.toml
+++ b/rsiot-http-server/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 name = "rsiot-http-server"
 version = "0.0.4"
-edition = "2021"
 description = "HTTP-сервер"
-license = "MIT"
+license.workspace = true
+edition.workspace = true
+rust-version.workspace = true
 
 [dependencies]
 axum = { workspace = true }
