--- a/rsiot-messages-core/Cargo.toml
+++ b/rsiot-messages-core/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 name = "rsiot-messages-core"
 version = "0.0.4"
-edition = "2021"
 description = "Базовые трейты для реализации типа сообщения"
-license = "MIT"
+license.workspace = true
+edition.workspace = true
+rust-version.workspace = true
 
 [dependencies]
 serde = { workspace = true }
