--- a/rsiot-modbus-client/Cargo.toml
+++ b/rsiot-modbus-client/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 name = "rsiot-modbus-client"
 version = "0.0.4"
-edition = "2021"
 description = "Опрос устройств Modbus, используя библиотеку tokio-modbus"
-license = "MIT"
+license.workspace = true
+edition.workspace = true
+rust-version.workspace = true
 
 
 [dependencies]
