--- a/rsiot-redis-publisher/Cargo.toml
+++ b/rsiot-redis-publisher/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 name = "rsiot-redis-publisher"
 version = "0.0.4"
-edition = "2021"
 description = "Публикация сообщений в Redis"
-license = "MIT"
+license.workspace = true
+edition.workspace = true
+rust-version.workspace = true
 
 
 [dependencies]
