--- a/rsiot-redis-subscriber/Cargo.toml
+++ b/rsiot-redis-subscriber/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 name = "rsiot-redis-subscriber"
 version = "0.0.4"
-edition = "2021"
 description = "Подписка на сообщения Redis"
-license = "MIT"
+license.workspace = true
+edition.workspace = true
+rust-version.workspace = true
 
 
 [dependencies]
