--- a/rsiot-timescaledb-storing/Cargo.toml
+++ b/rsiot-timescaledb-storing/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 name = "rsiot-timescaledb-storing"
 version = "0.0.4"
-edition = "2021"
 description = "Сохранение данных в TimescaleDB"
-license = "MIT"
+license.workspace = true
+edition.workspace = true
+rust-version.workspace = true
 
 [dependencies]
 chrono = { workspace = true }
