--- a/rsiot-websocket-client/Cargo.toml
+++ b/rsiot-websocket-client/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 name = "rsiot-websocket-client"
 version = "0.0.4"
-edition = "2021"
 description = "Websocket-клиент"
-license = "MIT"
+license.workspace = true
+edition.workspace = true
+rust-version.workspace = true
 
 
 [dependencies]
