--- a/rsiot-timescaledb-storing/Cargo.toml
+++ b/rsiot-timescaledb-storing/Cargo.toml
@@ -13,10 +13,12 @@ tokio = { workspace = true }
 tracing = { workspace = true }
 url = { workspace = true }
 
+rsiot-component-core = { workspace = true }
 rsiot-messages-core = { workspace = true }
-
 
 [dev-dependencies]
 serde = { workspace = true }
 chrono = { workspace = true }
 tracing-subscriber = { workspace = true }
+
+rsiot-extra-components = { workspace = true }
