--- a/rsiot/Cargo.toml
+++ b/rsiot/Cargo.toml
@@ -16,7 +16,7 @@ rsiot-redis-publisher = { workspace = true }
 rsiot-redis-subscriber = { workspace = true }
 rsiot-websocket-client = { workspace = true }
 rsiot-websocket-server = { workspace = true }
-
+rsiot-timescaledb-storing = { workspace = true }
 
 [features]
 ## Компонент http-клиент
