--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,8 +55,11 @@ document-features = { version = "0.2" }
 
 rsiot-extra-components = { version = "0.0.6", path = "./rsiot-extra-components" }
 rsiot-component-core = { version = "0.0.6", path = "./rsiot-component-core" }
+rsiot-http-client = { version = "0.0.6", path = "./rsiot-http-client" }
 rsiot-http-client-config = { version = "0.0.6", path = "./rsiot-http-client-config" }
+rsiot-http-server = { version = "0.0.6", path = "./rsiot-http-server" }
 rsiot-messages-core = { version = "0.0.6", path = "./rsiot-messages-core" }
+rsiot-modbus-client = { version = "0.0.6", path = "./rsiot-modbus-client" }
 rsiot-modbus-client-config = { version = "0.0.6", path = "./rsiot-modbus-client-config" }
 rsiot-redis-publisher = { version = "0.0.6", path = "./rsiot-redis-publisher" }
 rsiot-redis-subscriber = { version = "0.0.6", path = "./rsiot-redis-subscriber" }
