--- a/rsiot-modbus-client/Cargo.toml
+++ b/rsiot-modbus-client/Cargo.toml
@@ -14,8 +14,10 @@ tokio-modbus = { workspace = true }
 tracing = { workspace = true }
 url = { workspace = true }
 
+rsiot-component-core = { workspace = true }
+rsiot-components-config = { workspace = true }
 rsiot-messages-core = { workspace = true }
-rsiot-modbus-client-config = { workspace = true }
+rsiot-extra-components = { workspace = true }
 
 [dev-dependencies]
 tracing-subscriber = { workspace = true }
