--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,32 +24,34 @@ rust-version = "1.70.0"
 
 
 [workspace.dependencies]
-axum = { version = "0.6" }
-axum-test = { version = "13.1" }
-chrono = { version = "0.4", features = ["serde"] }
-http = { version = "1.0" }
+axum = { version = "0.6.20" }
+axum-test = { version = "13.4.1" }
+chrono = { version = "0.4.31", features = ["serde"] }
+http = { version = "1.0.0" }
 hyper = { version = "0.14" }
-futures = { version = "0.3" }
-futures-util = { version = "0.3" }
-redis = { version = "0.23", features = ["tokio-comp"] }
-reqwest = { version = "0.11", features = ["json"] }
-serde = { version = "1", features = ["derive"] }
-serde_json = { version = "1" }
-sqlx = { version = "0.7", features = [
+futures = { version = "0.3.29" }
+futures-util = { version = "0.3.29" }
+redis = { version = "0.23.3", features = ["tokio-comp"] }
+reqwest = { version = "0.11.22", features = ["json"] }
+serde = { version = "1.0.193", features = ["derive"] }
+serde_json = { version = "1.0.108" }
+sqlx = { version = "0.7.3", features = [
     "chrono",
     "macros",
     "postgres",
     "runtime-tokio",
 ] }
 # TODO - возможно, не все фичи tokio нужны
-tokio = { version = "1", features = ["full"] }
-tokio-modbus = { version = "0.9", default-features = false, features = ["tcp"] }
-tokio-tungstenite = { version = "0.20" }
-tokio-util = { version = "0.7" }
-tower-http = { version = "0.4", features = ["cors", "trace"] }
-tracing = { version = "0.1" }
-tracing-subscriber = { version = "0.3" }
-url = { version = "2.4" }
+tokio = { version = "1.34.0", features = ["full"] }
+tokio-modbus = { version = "0.9.0", default-features = false, features = [
+    "tcp",
+] }
+tokio-tungstenite = { version = "0.20.1" }
+tokio-util = { version = "0.7.10" }
+tower-http = { version = "0.4.4", features = ["cors", "trace"] }
+tracing = { version = "0.1.40" }
+tracing-subscriber = { version = "0.3.18" }
+url = { version = "2.5.0" }
 
 # документация
 document-features = { version = "0.2" }
