--- a/rsiot-component-core/Cargo.toml
+++ b/rsiot-component-core/Cargo.toml
@@ -11,3 +11,6 @@ futures = { workspace = true }
 tokio = { workspace = true }
 
 rsiot-messages-core = { workspace = true }
+
+[dev-dependencies]
+serde = { workpace = true }
