fix metadata and docs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,8 @@ resolver = "2"
 [workspace.package]
 edition = "2021"
 license = "MIT OR Apache-2.0"
+readme = "README.md"
+repository = "https://github.com/Konstantin-Dudersky/rsiot"
 rust-version = "1.74.0"
 
 
