--- a/rsiot-extra-components/Cargo.toml
+++ b/rsiot-extra-components/Cargo.toml
@@ -2,8 +2,9 @@
 name = "rsiot-extra-components"
 version = "0.0.7"
 description = "Дополнительные компоненты"
-license.workspace = true
 edition.workspace = true
+license.workspace = true
+readme.workspace = true
 rust-version.workspace = true
 
 [dependencies]
