--- a/rsiot-http-client/Cargo.toml
+++ b/rsiot-http-client/Cargo.toml
@@ -2,8 +2,9 @@
 name = "rsiot-http-client"
 version = "0.0.7"
 description = "HTTP-клиент"
-license.workspace = true
 edition.workspace = true
+license.workspace = true
+readme.workspace = true
 rust-version.workspace = true
 
 [dependencies]
