--- a/rsiot-redis-subscriber/Cargo.toml
+++ b/rsiot-redis-subscriber/Cargo.toml
@@ -2,8 +2,9 @@
 name = "rsiot-redis-subscriber"
 version = "0.0.7"
 description = "Подписка на сообщения Redis"
-license.workspace = true
 edition.workspace = true
+license.workspace = true
+readme.workspace = true
 rust-version.workspace = true
 
 
