--- a/rsiot-websocket-client/Cargo.toml
+++ b/rsiot-websocket-client/Cargo.toml
@@ -2,8 +2,9 @@
 name = "rsiot-websocket-client"
 version = "0.0.7"
 description = "Websocket-клиент"
-license.workspace = true
 edition.workspace = true
+license.workspace = true
+readme.workspace = true
 rust-version.workspace = true
 
 
