--- a/rsiot-components-config/Cargo.toml
+++ b/rsiot-components-config/Cargo.toml
@@ -1,8 +1,10 @@
 [package]
 name = "rsiot-components-config"
 version = "0.0.7"
+description = "Конфигурация компонентов"
 edition.workspace = true
 license.workspace = true
+readme.workspace = true
 rust-version.workspace = true
 
 
