--- a/rsiot-http-server/Cargo.toml
+++ b/rsiot-http-server/Cargo.toml
@@ -2,8 +2,9 @@
 name = "rsiot-http-server"
 version = "0.0.7"
 description = "HTTP-сервер"
-license.workspace = true
 edition.workspace = true
+license.workspace = true
+readme.workspace = true
 rust-version.workspace = true
 
 [dependencies]
