--- a/rsiot-modbus-client/Cargo.toml
+++ b/rsiot-modbus-client/Cargo.toml
@@ -2,8 +2,9 @@
 name = "rsiot-modbus-client"
 version = "0.0.7"
 description = "Опрос устройств Modbus, используя библиотеку tokio-modbus"
-license.workspace = true
 edition.workspace = true
+license.workspace = true
+readme.workspace = true
 rust-version.workspace = true
 
 
