--- a/rsiot/Cargo.toml
+++ b/rsiot/Cargo.toml
@@ -2,8 +2,9 @@
 name = "rsiot"
 version = "0.0.7"
 description = "Метакрейт, импортирующий все другие крейты через флаги feature"
-license.workspace = true
 edition.workspace = true
+license.workspace = true
+readme.workspace = true
 rust-version.workspace = true
 
 [dependencies]
