--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,8 +43,13 @@ sqlx = { version = "0.7.3", features = [
     "postgres",
     "runtime-tokio",
 ] }
-# TODO - возможно, не все фичи tokio нужны
-tokio = { version = "1.34.0", features = ["full"] }
+tokio = { version = "1.34.0", features = [
+    "macros",
+    "rt",
+    "rt-multi-thread",
+    "sync",
+    "time",
+] }
 tokio-modbus = { version = "0.9.0", default-features = false, features = [
     "tcp",
 ] }
