--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,9 @@ members = [
 resolver = "2"
 
 [workspace.package]
+categories = ["api-bindings", "gui", "network-programming"]
 edition = "2021"
+keywords = ["iot"]
 license = "MIT OR Apache-2.0"
 readme = "README.md"
 repository = "https://github.com/Konstantin-Dudersky/rsiot"
