--- a/rsiot/Cargo.toml
+++ b/rsiot/Cargo.toml
@@ -2,7 +2,9 @@
 name = "rsiot"
 version = "0.0.7"
 description = "Метакрейт, импортирующий все другие крейты через флаги feature"
+categories.workspace = true
 edition.workspace = true
+keywords.workspace = true
 license.workspace = true
 readme.workspace = true
 rust-version.workspace = true
