--- a/rsiot-component-core/Cargo.toml
+++ b/rsiot-component-core/Cargo.toml
@@ -2,7 +2,9 @@
 name = "rsiot-component-core"
 version = "0.0.7"
 description = "Типы данных для создания компонентов"
+categories.workspace = true
 edition.workspace = true
+keywords.workspace = true
 license.workspace = true
 readme.workspace = true
 rust-version.workspace = true
