--- a/rsiot-modbus-client/Cargo.toml
+++ b/rsiot-modbus-client/Cargo.toml
@@ -2,7 +2,9 @@
 name = "rsiot-modbus-client"
 version = "0.0.7"
 description = "Опрос устройств Modbus, используя библиотеку tokio-modbus"
+categories.workspace = true
 edition.workspace = true
+keywords.workspace = true
 license.workspace = true
 readme.workspace = true
 rust-version.workspace = true
