--- a/rsiot-redis-publisher/Cargo.toml
+++ b/rsiot-redis-publisher/Cargo.toml
@@ -2,7 +2,9 @@
 name = "rsiot-redis-publisher"
 version = "0.0.7"
 description = "Публикация сообщений в Redis"
+categories.workspace = true
 edition.workspace = true
+keywords.workspace = true
 license.workspace = true
 readme.workspace = true
 rust-version.workspace = true
