--- a/rsiot-redis-subscriber/Cargo.toml
+++ b/rsiot-redis-subscriber/Cargo.toml
@@ -2,7 +2,9 @@
 name = "rsiot-redis-subscriber"
 version = "0.0.7"
 description = "Подписка на сообщения Redis"
+categories.workspace = true
 edition.workspace = true
+keywords.workspace = true
 license.workspace = true
 readme.workspace = true
 rust-version.workspace = true
