--- a/rsiot-component-core/Cargo.toml
+++ b/rsiot-component-core/Cargo.toml
@@ -17,5 +17,5 @@ tracing = { workspace = true }
 rsiot-messages-core = { workspace = true }
 
 [dev-dependencies]
-serde = { workpace = true }
+serde = { workspace = true }
 tracing-subscriber = { workspace = true }
