--- a/rsiot-http-server/Cargo.toml
+++ b/rsiot-http-server/Cargo.toml
@@ -18,6 +18,7 @@ tower-http = { workspace = true }
 url = { workspace = true }
 
 rsiot-component-core = { workspace = true }
+rsiot-components-config = { workspace = true }
 rsiot-extra-components = { workspace = true }
 rsiot-messages-core = { workspace = true }
 
