--- a/rsiot-messages-core/Cargo.toml
+++ b/rsiot-messages-core/Cargo.toml
@@ -6,7 +6,7 @@ categories.workspace = true
 edition.workspace = true
 keywords.workspace = true
 license.workspace = true
-readme.workspace = true
+readme = "README.md"
 rust-version.workspace = true
 
 [dependencies]
