config in separate crate

--- a/rsiot-components-config/Cargo.toml
+++ b/rsiot-components-config/Cargo.toml
@@ -11,4 +11,7 @@ rust-version.workspace = true
 
 
 [dependencies]
+http = { workspace = true }
 url = { workspace = true }
+
+rsiot-messages-core = { workspace = true }
