--- a/rsiot-http-client/Cargo.toml
+++ b/rsiot-http-client/Cargo.toml
@@ -16,7 +16,7 @@ tracing = { workspace = true }
 url = { workspace = true }
 
 rsiot-extra-components = { workspace = true }
-rsiot-http-client-config = { workspace = true }
+rsiot-components-config = { workspace = true }
 rsiot-messages-core = { workspace = true }
 
 [dev-dependencies]
