--- a/rsiot-redis-publisher/Cargo.toml
+++ b/rsiot-redis-publisher/Cargo.toml
@@ -14,12 +14,13 @@ rust-version.workspace = true
 redis = { workspace = true }
 tokio = { workspace = true }
 tracing = { workspace = true }
-url = { workspace = true }
 
 rsiot-component-core = { workspace = true }
+rsiot-components-config = { workspace = true }
 rsiot-extra-components = { workspace = true }
 rsiot-messages-core = { workspace = true }
 
 [dev-dependencies]
 tracing-subscriber = { workspace = true }
 serde = { workspace = true }
+url = { workspace = true }
