--- a/rsiot-redis-subscriber/Cargo.toml
+++ b/rsiot-redis-subscriber/Cargo.toml
@@ -18,6 +18,7 @@ tracing = { workspace = true }
 url = { workspace = true }
 
 rsiot-component-core = { workspace = true }
+rsiot-components-config = { workspace = true }
 rsiot-extra-components = { workspace = true }
 rsiot-messages-core = { workspace = true }
 
