--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,12 +14,10 @@ services:
       - POSTGRES_PASSWORD=postgres
     ports:
       - "5432:5432"
-    profiles:
-      - "dev"
     volumes:
-      - ./rsiot-timescaledb-config/postgresql.conf:/etc/postgresql/postgresql.conf
-      - ./rsiot-timescaledb-config/pg_hba.conf:/etc/postgresql/pg_hba.conf
-      - ./rsiot-timescaledb-config/init.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./rsiot-config-files/timescaledb/postgresql.conf:/etc/postgresql/postgresql.conf
+      - ./rsiot-config-files/timescaledb/pg_hba.conf:/etc/postgresql/pg_hba.conf
+      - ./rsiot-config-files/timescaledb/init.sql:/docker-entrypoint-initdb.d/init.sql
 
   # для тестирования http-client
   httpbin:
@@ -28,8 +26,6 @@ services:
     image: kennethreitz/httpbin
     ports:
       - "80:80"
-    profiles:
-      - "dev"
 
   # для тестирования websocket
   websocket-client-testing:
@@ -38,8 +34,6 @@ services:
     image: crossbario/autobahn-testsuite
     ports:
       - "9001:9001"
-    profiles:
-      - "dev"
     command: wstest -m broadcastserver -w ws://localhost:9001
 
   # для тестирования modbus-client
@@ -49,8 +43,6 @@ services:
     image: oitc/modbus-server
     ports:
       - "5020:5020"
-    profiles:
-      - "dev"
     volumes:
       - ./rsiot-modbus-client/modbus_server.json:/app/modbus_server.json
 
@@ -60,7 +52,12 @@ services:
     hostname: redis
     image: redis/redis-stack:latest
     ports:
-      - "6379:6379"
-      - "4000:8001"
-    profiles:
-      - "dev"
+      - "6379:6379" # порт Redis
+      - "8001:8001" # порт UI
+    volumes:
+      - redis_data:/data
+      - ./services/redis/redis.conf:/redis-stack.conf
+
+volumes:
+  redis_data:
+    name: redis_data
