--- a/rsiot-timescaledb-storing/Cargo.toml
+++ b/rsiot-timescaledb-storing/Cargo.toml
@@ -17,10 +17,10 @@ tracing = { workspace = true }
 url = { workspace = true }
 
 rsiot-component-core = { workspace = true }
+rsiot-components-config = { workspace = true }
 rsiot-messages-core = { workspace = true }
 
 [dev-dependencies]
-serde = { workspace = true }
 chrono = { workspace = true }
 tracing-subscriber = { workspace = true }
 
