--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,6 @@
 [workspace]
 members = [
+    "./rsiot",
     "./rsiot-component-core",
     "./rsiot-components-config",
     "./rsiot-env-vars",
@@ -63,6 +64,9 @@ tower-http = { version = "0.5.0", features = ["cors", "trace"] }
 tracing = { version = "0.1.40" }
 tracing-subscriber = { version = "0.3.18" }
 url = { version = "2.5.0" }
+
+# документация
+document-features = { version = "0.2.7" }
 
 # для макросов
 proc-macro2 = "1.0"
